# libcodex

./: .gitignore  CMakeLists.txt  CppProperties.json  LICENSE  README.md  build.sh
codex/: CMakeLists.txt
codex/include/codex/: codex.hpp  function.hpp  singleton.hpp
codex/include/codex/buffer/: ctrl_blk.hpp  shared_blk.hpp
codex/include/codex/conv/: checksum.hpp  crc32.hpp  string.hpp
codex/include/codex/vision/: bitmap.hpp  canny.hpp  fft.hpp  harris.hpp  hough.hpp  image.hpp  image_draw.hpp  image_proc.hpp  kernel.hpp  sobel.hpp  vision.hpp
codex/srcs/buffer/: ctrl_blk.cpp  shared_blk.cpp
codex/srcs/conv/: base64.cpp  crc32.cpp
codex/srcs/vision/: bitmap.cpp  canny.cpp  fft.cpp  harris.cpp  hough.cpp  image.cpp  image_draw.cpp  image_proc.cpp
srcs/: CMakeLists.txt  codex.cpp  error_code.cpp
srcs/conv/: base64.cpp
srcs/include/codex/: codex.hpp  container_of.hpp  error_code.hpp  function.hpp  function.ipp
srcs/include/codex/conv/: base64.hpp  string.hpp
tests/: CMakeLists.txt  test_avl_tree.cpp  test_boost_regex.cpp  test_container_of.cpp  test_conv.cpp  test_error.cpp  test_function.cpp  test_hello.cpp  test_helper.hpp  test_leetcode.cpp  test_leetcode_reverse_int.cpp  test_main.cpp  test_singleton_dclp.cpp  test_test.cpp  test_tree.cpp  test_vision_bitmap.cpp
tests.qt/tests_qt/: tests_qt.pro
tests.qt/tests_qt/app/: app.pro  binarysampledialog.cpp  binarysampledialog.h  binarysampledialog.ui  fftdialog.cpp  fftdialog.hpp  fftdialog.ui  histogramdialog.cpp  histogramdialog.hpp  kmeandialog.cpp  kmeandialog.h  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qtconvinience.cpp  qtconvinience.hpp  res.qrc
tests.qt/tests_qt/codex/: codex.cpp  codex.hpp  codex.pro
